feat: 基礎架構建設

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,13 @@ import StartTerminalConnection from '../components/StartTerminalButton';
 		<div class="flex bg-white">
 			<StartTerminalConnection client:only="solid-js">Button</StartTerminalConnection>
 		</div>
+		<div class="flex bg-white">
+			<div class="mockup-code">
+				<pre data-prefix="$"><code>npm i daisyui</code></pre>
+				<pre data-prefix=">" class="text-warning"><code>installing...</code></pre>
+				<pre data-prefix=">" class="text-success"><code>Done!</code></pre>
+			</div>
+		</div>
 	</main>
 </Layout>
 
