--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,12 @@ import MenuCard from '../components/MenuCard'
 ---
 
 <Layout title="Workbench">
-	<main>
+	<main class="w-5/6 m-auto">
 		<div class="flex flex-col gap-y-4">
 			<MenuCard name="logs" client:only="solid-js" />
 			<MenuCard name="proj-ini" client:only="solid-js" />
 			<MenuCard name="snmss-ini" client:only="solid-js" />
+			</div>
 		</div>
 	</main>
 </Layout>
