--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import MenuCard from '../components/MenuCard'
 	<main class="w-5/6 m-auto">
 		<div class="flex flex-col gap-y-4">
 			<MenuCard name="logs" client:only="solid-js" />
+			<MenuCard name="process-manager" client:only="solid-js" />
 			<MenuCard name="proj-ini" client:only="solid-js" />
 			<MenuCard name="snmss-ini" client:only="solid-js" />
 			</div>
