--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,8 @@ import MenuCard from '../components/MenuCard'
 <Layout title="Workbench">
 	<main class="w-5/6 m-auto">
 		<div class="flex flex-col gap-y-4">
-			<MenuCard name="logs" client:only="solid-js" />
-			<MenuCard name="process-manager" client:only="solid-js" />
+			<MenuCard name="log" client:only="solid-js" />
+			<MenuCard name="process" client:only="solid-js" />
 			<MenuCard name="proj-ini" client:only="solid-js" />
 			<MenuCard name="snmss-ini" client:only="solid-js" />
 			</div>
